--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APP_NAME=Laravel
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:FllRdaN61ZPF88WV02nUKGEFzouEkbzE6cGjcQyx/iw=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
